Remove .env.example file, update .gitignore to include .venv/ and /temp/*, and modify app.py to handle image data more effectively by reading image bytes directly from file and improving error handling with detailed traceback logging.

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ var/
 *.egg
 
 # Virtual Environment
-venv/
+.venv/
 ENV/
 
 # Generated files
@@ -38,3 +38,5 @@ generated_*
 .vscode/
 *.swp
 *.swo 
+
+/temp/*
